--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,6 +53,19 @@ jobs:
           plugin_languages_recent_load: 200
           plugin_languages_sections: most-used
           plugin_languages_threshold: 1%
+          filename: "profile-left.svg"
+
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          # Options
+          user: AnggaR96s
+          template: classic
+          base: header, activity, community, repositories, metadata
+          base_hireable: yes
+          config_display: columns
+          config_octicon: yes
+          config_timezone: Asia/Jakarta
           plugin_lines: yes
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 6
@@ -72,3 +85,4 @@ jobs:
           plugin_people_shuffle: yes
           plugin_people_size: 22
           plugin_people_types: followers, following
+          filename: "profile-right.svg"
