--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@v3.34
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
@@ -55,7 +55,7 @@ jobs:
           plugin_languages_threshold: 1%
           filename: "profile-left.svg"
 
-      - uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@v3.34
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           # Options
