--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@v3.34
+      - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
@@ -33,6 +33,12 @@ jobs:
           plugin_code_lines: 8
           plugin_code_load: 200
           plugin_code_visibility: public
+          plugin_traffic: yes
+          plugin_gists: yes
+          plugin_notable: yes
+          plugin_notable_indepth: yes
+          plugin_notable_repositories: yes
+          plugin_support: yes
           plugin_discussions: yes
           plugin_discussions_categories: yes
           plugin_followup: yes
@@ -64,10 +70,11 @@ jobs:
           plugin_pagespeed_pwa: yes
           plugin_pagespeed_url: .user.website
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-          plugin_music_token: ${{ secrets.LASTFM_TOKEN }}
           plugin_music: yes
-          plugin_music_provider: lastfm
-          plugin_music_user: DeathRhythm
+          plugin_music_provider: spotify
+          plugin_music_mode: recent
+          plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
+          plugin_music_limit: 4
           plugin_people: yes
           plugin_people_identicons: yes
           plugin_people_limit: 0
