--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,9 +12,16 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Set Git Committer Information
+        env:
+          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+        run: |
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: AnggaR96s
@@ -38,7 +45,6 @@ jobs:
           plugin_notable: yes
           plugin_notable_indepth: yes
           plugin_notable_repositories: yes
-          plugin_support: yes
           plugin_discussions: yes
           plugin_discussions_categories: yes
           plugin_followup: yes
@@ -49,8 +55,8 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 7.5
-          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 15
           plugin_languages_categories: programming
           plugin_languages_colors: github
           plugin_languages_indepth: yes
@@ -60,7 +66,7 @@ jobs:
           plugin_languages_recent_days: 7
           plugin_languages_recent_load: 200
           plugin_languages_sections: most-used
-          plugin_languages_threshold: 1%
+          plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 6
@@ -77,6 +83,7 @@ jobs:
           plugin_music_limit: 4
           plugin_people: yes
           plugin_people_identicons: yes
+          plugin_fortune: yes
           plugin_people_limit: 0
           plugin_people_shuffle: yes
           plugin_people_size: 22
