--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,16 +12,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Set Git Committer Information
-        env:
-          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
-        run: |
-          git config --global user.name "$GIT_USER_NAME"
-          git config --global user.email "$GIT_USER_EMAIL"
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: AnggaR96s
@@ -36,7 +29,7 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: X
           plugin_code: yes
-          plugin_code_days: 3
+          plugin_code_days: 7
           plugin_code_lines: 8
           plugin_code_load: 200
           plugin_code_visibility: public
@@ -80,7 +73,7 @@ jobs:
           plugin_music_provider: spotify
           plugin_music_mode: recent
           plugin_music_token: ${{ secrets.SPOTIFY_TOKENS }}
-          plugin_music_limit: 4
+          plugin_music_limit: 5
           plugin_people: yes
           plugin_people_identicons: yes
           plugin_fortune: yes
