--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,14 +51,14 @@ jobs:
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 15
           plugin_languages_categories: programming
-          plugin_languages_colors: github
-          plugin_languages_indepth: yes
-          plugin_languages_limit: 6
+          plugin_languages_colors: rainbow
+          plugin_languages_indepth: no
+          plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: programming
           plugin_languages_recent_days: 7
-          plugin_languages_recent_load: 200
-          plugin_languages_sections: most-used
+          plugin_languages_recent_load: 400
+          plugin_languages_sections: recently-used
           plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_lines_history_limit: 1
